# libutil

./: .gitattributes  .gitignore  CMakeLists.txt  Readme.md
cmake/: AddFlags.cmake  AddMacros.cmake  AddTestcase.cmake  AppendToStringUnique.cmake  CheckAndAddFlag.cmake  CheckAndAddWarnings.cmake  ConstrainedOption.cmake  DetectOsXArchs.cmake  EnableCCache.cmake  EnableSanitizers.cmake  EnableWarnings.cmake  EnsureOutOfSourceBuild.cmake  FindClangFormat.cmake  FindGettext.cmake  FindIconv.cmake  FindLua.cmake  FindMiniupnpc.cmake  FindSndfile.cmake  GatherDll.cmake  ParseArguments.cmake  RttrBoostCfg.cmake  RttrCoverageCfg.cmake  RttrTestingCfg.cmake  SaveVariables.cmake  lsan.supp  sanitizer.supp  ubsan.supp
cmake/Modules/: CMakeDetectOsXArchs.cmake  CheckAndAddFlag.cmake  EnableWarnings.cmake  FindClangFormat.cmake  FindLUA.cmake  FindLua.cmake  GatherDll.cmake  RttrBoostCfg.cmake
cmake/cmake_3.14/: FetchContent.cmake  FindBoost.cmake
cmake/cmake_3.14/FetchContent/: CMakeLists.cmake.in
include/libutil/: AvoidDuplicatesWriter.h  BinaryFile.h  Deleter.h  FileWriter.h  FormatedLogEntry.h  IP.hpp  LANDiscovery.h  LANDiscoveryClient.h  LANDiscoveryService.h  LocaleHelper.h  Log.h  Message.h  MessageHandler.h  MessageInterface.h  MessageQueue.h  Messages.h  MyTime.h  NullWriter.h  Protocol.h  ProxySettings.h  SerializableArray.h  Serializer.h  Singleton.h  SingletonImp.hpp  SingletonPolicies.h  Socket.h  SocketSet.h  StdStreamWriter.h  StringConversion.h  StringStreamWriter.h  System.h  TextWriterInterface.h  Tokenizer.h  UPnP.h  UniqueHandle.h  colors.h  dynamicUniqueCast.h  enumUtils.h  error.h  fileFuncs.h  (+8 more)
libs/: CMakeLists.txt
libs/common/: CMakeLists.txt
libs/common/include/s25util/: BinaryFile.h  LocaleHelper.h  MyTime.h  SerializableArray.h  Serializer.h  Singleton.h  SingletonImp.hpp  SingletonPolicies.h  StringConversion.h  System.h  Tokenizer.h  UniqueHandle.h  VersionedDeserializer.h  VersionedSerializer.h  boostTestHelpers.h  colors.h  dynamicUniqueCast.h  enumUtils.h  fileFuncs.h  file_handle.h  getExecutablePath.h  md5.hpp  span.hpp  strAlgos.h  strFuncs.h  tmpFile.h  ucString.h  utf8.h  warningSuppression.h
libs/common/src/: BinaryFile.cpp  LocaleHelper.cpp  MyTime.cpp  Serializer.cpp  SingletonPolicies.cpp  StringConversion.cpp  System.cpp  System_Other.cpp  System_Win32.cpp  Tokenizer.cpp  fileFuncs.cpp  getExecutablePath.cpp  md5.cpp  strFuncs.cpp  tmpFile.cpp  ucString.cpp  utf8.cpp
libs/log/: CMakeLists.txt
libs/log/include/s25util/: AvoidDuplicatesWriter.h  FileWriter.h  FormatedLogEntry.h  Log.h  NullWriter.h  StdStreamWriter.h  StringStreamWriter.h  TextWriterInterface.h  error.h
libs/log/src/: FileWriter.cpp  FormatedLogEntry.cpp  Log.cpp  StdStreamWriter.cpp  StringStreamWriter.cpp  error.cpp
libs/network/: CMakeLists.txt
libs/network/include/s25util/: IP.hpp  LANDiscovery.h  LANDiscoveryClient.h  LANDiscoveryService.h  Message.h  MessageHandler.h  MessageInterface.h  MessageQueue.h  Messages.h  Protocol.h  ProxySettings.h  Socket.h  SocketSet.h  UPnP.h
libs/network/src/: IP.cpp  LANDiscovery.cpp  LANDiscoveryClient.cpp  LANDiscoveryService.cpp  Message.cpp  MessageHandler.cpp  MessageQueue.cpp  Socket.cpp  SocketSet.cpp  UPnP.cpp  UPnP_MSVC.cpp  UPnP_Other.cpp
libutf8/utf8/: checked.h  core.h
nowide/: CMakeLists.txt
nowide/include/boost/nowide/: args.hpp  cstdio.hpp  filebuf.hpp  fstream.hpp  system.hpp  utf8_codecvt.hpp
nowide/src/: CMakeLists.txt  cstdio.cpp  iostream.cpp  system.cpp
src/: BinaryFile.cpp  BinaryFile.h  CMakeLists.txt  FileWriter.cpp  FileWriter.h  FormatedLogEntry.cpp  FormatedLogEntry.h  IP.cpp  LANDiscovery.cpp  LANDiscovery.h  LANDiscoveryClient.cpp  LANDiscoveryService.cpp  LANDiscoveryService.h  LocaleHelper.cpp  Log.cpp  Log.h  Message.cpp  Message.h  MessageHandler.cpp  MessageHandler.h  MessageInterface.cpp  MessageInterface.h  MessageQueue.cpp  MessageQueue.h  Messages.cpp  Messages.h  MyTime.cpp  MyTime.h  Protocol.h  SerializableArray.cpp  SerializableArray.h  Serializer.cpp  Serializer.h  Singleton.h  SingletonImp.hpp  SingletonPolicies.cpp  SingletonPolicies.h  Socket.cpp  Socket.h  SocketSet.cpp  (+34 more)
tests/: CMakeLists.txt  main.cpp  testEnumUtils.cpp  testFilefuncs.cpp  testIP.cpp  testMD5.cpp  testSerializer.cpp  testStrFuncs.cpp  testSystem.cpp  testTokenizer.cpp
tools/ci/: collectCoverageData.sh  installBoost.sh  installCMake.sh  setupXServer.sh  uploadCoverageData.sh
utf8/: Source.txt
utfcpp/: Source.txt
utfcpp/source/: utf8.h
utfcpp/source/utf8/: checked.h
win32/vs2008/: libutil.vcproj
win32/vs2010/: libutil.vcxproj  libutil.vcxproj.filters
win32/vs2012/: libutil.vcxproj  libutil.vcxproj.filters
